--- a/ocr-app/src/main/resources/application.properties
+++ b/ocr-app/src/main/resources/application.properties
@@ -11,3 +11,12 @@ ollama.model.name=gemma3:12b
 
 # Logging configuration
 logging.level.com.example.ocr=DEBUG
+
+# Tesseract configuration
+tesseract.data.path=C:/Program Files/Tesseract-OCR/tessdata
+
+# OpenAI configuration
+openai.api.url=https://api.openai.com/v1/chat/completions
+
+# Logging for OCR operations
+logging.level.com.example.ocr.service=DEBUG
