--- a/ocr-app/pom.xml
+++ b/ocr-app/pom.xml
@@ -56,6 +56,15 @@
 			<artifactId>tess4j</artifactId>
 			<version>5.8.0</version>
 		</dependency>
+		<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+</dependency>
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
